Add result container

--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
 </head>
 
 <body>
-    <button>Click</button>
-    <script src="js/index.js"></script>
+    <button id="start">Click</button>
+    <div class="result-container"></div>
+    <script type="module" src="js/index.js"></script>
 </body>
 
 </html>
