--- a/index.html
+++ b/index.html
@@ -1,22 +1,30 @@
-<!doctype html>
+<!DOCTYPE html>
 
 <html lang="en">
+  <head>
+    <meta charset="utf-8" />
 
-<head>
-    <meta charset="utf-8">
+    <title>Hackathon Hard Mode</title>
+    <meta name="description" content="Just for fun project" />
+    <meta name="author" content="Minh Phu Lai, Walter Lim" />
+    <link href="https://fonts.googleapis.com/css?family=Josefin+Sans&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/styles.css" />
+  </head>
 
-    <title>The Ramdon tech slot machine</title>
-    <meta name="description" content="Just for fun project">
-    <meta name="author" content="Minh">
+  <body>
+    <div class="grid-main">
+      <div class="container-query">
+        <h1>Hacker Hard Mode</h1>
 
-    <link rel="stylesheet" href="css/styles.css?v=1.0">
-
-</head>
-
-<body>
-    <button id="start">Click</button>
-    <div class="result-container"></div>
-    <script type="module" src="js/index.js"></script>
-</body>
-
+        <p>
+          Wanting something more difficult for your next project or hackathon?<br />
+          Hit the button to get an extra spicy tech stack challenge.
+        </p>
+        <button class="button-main" id="start">Click me</button>
+      </div>
+      <div class="result-container"></div>
+      <script type="module" src="js/index.js"></script>
+    </div>
+  </body>
+  <!-- <footer>Created by Minh Phu Lai and Walter Lim</footer> -->
 </html>
