cosmetic fixes to slot machine items

--- a/index.html
+++ b/index.html
@@ -7,24 +7,32 @@
     <title>Hackathon Hard Mode</title>
     <meta name="description" content="Feeling sadistic?" />
     <meta name="author" content="Minh Phu Lai, Walter Lim" />
-    <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:300,400,600,700&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css?family=Josefin+Sans:300,400,600,700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="css/styles.css" />
   </head>
 
   <body>
     <div class="grid-main">
       <div class="container-query">
-        <h1 class='container-title'>Hacker Hard Mode</h1>
+        <h1 class="container-title">Hackathon Hard Mode</h1>
 
-        <p class='container-description'>
-          Wanting something more difficult for your next project or hackathon?<br />
-          Hit the button to get an extra spicy tech stack challenge.
+        <p class="container-description">
+          Wanting something more difficult for your next web project or
+          hackathon?<br />
+          Hit the button to get an extra spicy tech challenge.
         </p>
-        <button class="button-main" id="start">Click me</button>
+        <button class="button-main" id="start">Generate Challege</button>
       </div>
       <div class="result-container"></div>
       <script type="module" src="js/index.js"></script>
     </div>
   </body>
-  <!-- <footer>Created by Minh Phu Lai and Walter Lim</footer> -->
+  <footer>
+    Created by
+    <a href="https://github.com/MinhPhu0304/" target="_blank">Minh Phu Lai</a>
+    and <a href="https://walt.online" target="_blank">Walter Lim</a>
+  </footer>
 </html>
