extra hard mode

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8" />
 
-    <title>Hackathon Hard Mode</title>
+    <title>Spicy Hack Challenge</title>
     <meta name="description" content="Feeling sadistic?" />
     <meta name="author" content="Minh Phu Lai, Walter Lim" />
     <link
@@ -17,12 +17,12 @@
   <body>
     <div class="grid-main">
       <div class="container-query">
-        <h1 class="container-title">Hackathon Hard Mode</h1>
+        <h1 class="container-title">Spicy Hack Challenge</h1>
 
         <p class="container-description">
           Wanting something more difficult for your next web project or
           hackathon?<br />
-          Hit the button to get an extra spicy tech challenge.
+          Hit the button to get an extra spicy hack challenge.
         </p>
         <button class="button-main" id="start">Generate Challege</button>
       </div>
