--- a/10x.html
+++ b/10x.html
@@ -12,7 +12,7 @@
       rel="stylesheet"
     />
     <script src="js/10x-index.js"></script>
-    <link rel="stylesheet" href="css/10x-styles.css" />
+    <link rel="stylesheet" href="css/styles.css" />
   </head>
 
   <body>
@@ -25,7 +25,7 @@
           hackathon?<br />
           Hit the button to get an extra spicy hack challenge.
         </p>
-        <button class="button-main" id="start">Generate Challege</button>
+        <button class="button-main" id="start">Generate 10x</button>
       </div>
       <div class="result-container"></div>
    
