--- a/10x.html
+++ b/10x.html
@@ -11,7 +11,7 @@
       href="https://fonts.googleapis.com/css?family=Josefin+Sans:300,400,600,700&display=swap"
       rel="stylesheet"
     />
-    <script src="js/10x-index.js"></script>
+    <script type="module" src="js/10x-index.js"></script>
     <link rel="stylesheet" href="css/styles.css" />
   </head>
 
