--- a/10x/index.html
+++ b/10x/index.html
@@ -4,16 +4,16 @@
   <head>
     <meta charset="utf-8" />
 
-    <meta content="width=device-width, initial-scale=1" name="viewport" />
     <title>10X Extra Spicy Hack Challenge</title>
     <meta name="description" content="Feeling sadistic?" />
+    <meta content="width=device-width, initial-scale=1" name="viewport" />
     <meta name="author" content="Minh Phu Lai, Walter Lim" />
     <link
       href="https://fonts.googleapis.com/css?family=Josefin+Sans:300,400,600,700&display=swap"
       rel="stylesheet"
     />
-    <script type="module" src="js/10x-index.js"></script>
-    <link rel="stylesheet" href="css/styles.css" />
+    <script src="js/10x-index.js"></script>
+    <link rel="stylesheet" href="css/10x-styles.css" />
   </head>
 
   <body>
@@ -26,7 +26,7 @@
           hackathon?<br />
           Hit the button to get an extra spicy hack challenge.
         </p>
-        <button class="button-main" id="start">Generate 10x</button>
+        <button class="button-main" id="start">Generate Challege</button>
       </div>
       <div class="result-container"></div>
    
