--- a/10x.html
+++ b/10x.html
@@ -19,7 +19,7 @@
   <body>
     <div class="grid-main">
       <div class="container-query">
-        <h1 class="container-title">Spicy Hack Challenge</h1>
+        <h1 class="container-title">10x-index Developer Challenge</h1>
 
         <p class="container-description">
           Wanting something more difficult for your next web project or
