--- a/10x.html
+++ b/10x.html
@@ -19,12 +19,12 @@
   <body>
     <div class="grid-main">
       <div class="container-query">
-        <h1 class="container-title">10x-index Developer Challenge</h1>
+        <h1 class="container-title">10x Developer Challenge</h1>
 
         <p class="container-description">
           Wanting something more difficult for your next web project or
           hackathon?<br />
-          Hit the button to get an extra spicy hack challenge.
+          <a href=''>Rules</a> / <a href='index.html'>Easy edition</a>
         </p>
         <button class="button-main" id="start">Generate 10x</button>
       </div>
