--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
         <p class="container-description">
           Wanting something more difficult for your next web project or
           hackathon?<br />
-          Hit the button to get an extra spicy hack challenge.
+          
+          <a href=''>Rules</a> / <a href='10x.html'>10x Developer super spicy edition</a>
         </p>
         <button class="button-main" id="start">Generate Challege</button>
       </div>
