--- a/10x.html
+++ b/10x.html
@@ -13,7 +13,7 @@
       rel="stylesheet"
     />
     <script type="module" src="js/10x-index.js"></script>
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="css/x-styles.css" />
   </head>
 
   <body>
