--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Spicy Hack Challenge</title>
     <meta name="description" content="Feeling sadistic?" />
     <meta name="author" content="Minh Phu Lai, Walter Lim" />
+
+
+    <meta content="width=device-width, initial-scale=1" name="viewport" />
     <link
       href="https://fonts.googleapis.com/css?family=Josefin+Sans:300,400,600,700&display=swap"
       rel="stylesheet"
