Change Minh author url to personal site

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   </body>
   <footer>
     Created by
-    <a href="https://github.com/MinhPhu0304/" target="_blank">Minh Phu Lai</a>
+    <a href="https://minh.rocks" target="_blank">Minh Phu Lai</a>
     and <a href="https://walt.online" target="_blank">Walter Lim</a>
   </footer>
 </html>
